# cthulu

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  Dockerfile  Kthanid-manifest.json  LESSONS.md  MCP-TESTING.md  Makefile  NOPE.md  README.md  SLACK_SETUP.md  cloud-run.yaml  cthulu.toml  docker-compose.searxng.yml  docker-compose.yml  mcp-project.json  nx.json  package-lock.json  package.json  project.json  searxng-settings.yml  vitest.config.ts
.claude/: lessons.md
.claude/rules/: CODE_QUALITY.md  RULES.md  SECURITY.md
.claude/skills/: claude-cli-shortcuts.skill.md  claude-cli-streaming.skill.md  frontend-patterns.skill.md  nx-monorepo.skill.md  react-flow.skill.md  rust-axum.skill.md  sandbox-module.md  security-dependency-management.skill.md
.github/workflows/: ci.yml  code-review-agent.yml  release.yml
.skills/: Skill.md  workflow.json
cthulu-backend/: agent_pool.rs  config.rs  lib.rs  main.rs  templates.rs  vm_manager.rs  vm_monitor.rs  watcher.rs
cthulu-backend/agent_sdk/: config.rs  message.rs  mod.rs  session.rs
cthulu-backend/agents/: bugs_bunny_prompt.md  code_reviewer_prompt.md  daffy_duck_prompt.md  file_repository.rs  heartbeat.rs  mod.rs  repository.rs  studio_assistant_prompt.md  tasks.rs  tweety_bird_prompt.md
cthulu-backend/api/: changes.rs  clerk_auth.rs  error.rs  local_auth.rs  middleware.rs  mod.rs  routes.rs  teams.rs  user_context.rs  validation.rs
cthulu-backend/claude_adapter/: mod.rs  parse.rs  probe.rs
cthulu-backend/cloud/: a2a_client.rs  mod.rs  vm_manager_client.rs  vm_pool.rs
cthulu-backend/flows/: budget.rs  events.rs  file_repository.rs  mod.rs  processors.rs  repository.rs  runner.rs  scheduler.rs  session_bridge.rs
cthulu-backend/git/: mod.rs  tests.rs
cthulu-backend/prompts/: file_repository.rs  mod.rs  repository.rs
cthulu-backend/sandbox/: error.rs  handle.rs  mod.rs  provider.rs  types.rs
cthulu-backend/slack/: client.rs
cthulu-backend/storage/: mod.rs  mongo.rs  sqlite.rs
cthulu-backend/tasks/: context.rs  diff.rs  mod.rs  pipeline.rs
cthulu-mcp/: client.rs  main.rs  rate_limiter.rs  search.rs
cthulu-mcp/tools/: agents.rs  flows.rs  mod.rs  prompts.rs  search.rs  utility.rs
cthulu-site/: AGENTS.md  package-lock.json  package.json  project.json
cthulu-site/app/: globals.css  layout.tsx  page.tsx
cthulu-site/components/: ConfigExample.tsx  Features.tsx  FlowDemo.tsx  FlowDemoNodes.tsx  Footer.tsx  GetStarted.tsx  Hero.tsx  HowItWorks.tsx  MultiAgent.tsx  Nav.tsx  Plugins.tsx  Skills.tsx  StudioShowcase.tsx  UseCases.tsx  ValueProps.tsx
cthulu-studio/: AGENTS.md  components.json  index.html  package-lock.json  package.json  project.json  tsconfig.json  vite.config.ts
cthulu-studio/src/: App.tsx  main.tsx  styles.css
cthulu-studio/src-tauri/: Cargo.toml  tauri.conf.json
cthulu-studio/src-tauri/capabilities/: default.json
cthulu-studio/src-tauri/icons/: icon.icns
cthulu-studio/src-tauri/src/: events.rs  hook_script.rs  hook_server.rs  main.rs
cthulu-studio/src-tauri/src/commands/: agent_repo.rs  agents.rs  auth.rs  chat.rs  cloud.rs  flows.rs  heartbeat.rs  hooks.rs  mod.rs  prompts.rs  pty.rs  secrets.rs  tasks.rs  templates.rs  workflows.rs
docs/: AGENT_DESIGN.md  AI-WORKFLOW.md  TROUBLESHOOTING.md  makefile-guide.md
examples/: crypto_news.toml  crypto_news_flow.json  hierarchy-org.yaml
examples/flows/: crypto-news-asia.yaml  dev-changelog.yaml  orangerock-market-brief.yaml  orangerock-newsletter.yaml  pr-review.yaml  product-updates.yaml  (+2 more)
k8s/: deployment.yaml  ingress.yaml  vault-setup.sh
prompts/: dev_changelog.md  notion_newsletter.md  orangerock_brief.md  pr_review.md  product_updates.md  stale_prs.md
scripts/: build-desktop.sh  build.sh  cthulu-apply.py  deploy.sh  dev-desktop.sh  dev.sh  generate-icons.mjs  integration-test-e2e-workflow.sh  integration-test-hierarchy.sh  mcp-launcher.sh  provision-cloud-agent.sh  provision-pool.sh  setup_mcp_config.py  slack_messages.py
src/: config.rs  main.rs  relay.rs  setup.rs  slack_socket.rs
(+258 files in other folders)
