[package]
name = "cthulu"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 0
debug-assertions = false
overflow-checks = false

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
futures = "0.3.31"
async-stream = "0.3.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8"
async-trait = "0.1"
hyper = { version = "1", default-features = false, features = ["http1", "http2", "server", "client"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
dotenvy = "0.15.7"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "time", "local-time"] }
sentry = { version = "0.46.0", features = ["tower-axum-matched-path", "tracing", "logs"] }
