[package]
name = "cthulu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cthulu"
path = "cthulu-backend/main.rs"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false

[dependencies]
axum = { version = "0.8.8", features = ["json", "ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
futures = "0.3.32"
async-stream = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
async-trait = "0.1.89"
hyper = { version = "1", default-features = false, features = ["http1", "http2", "server", "client"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
feed-rs = "2.3.1"
gcp_auth = "0.12"
scraper = "0.23"
croner = "2"
dirs = "6.0.0"
tower-http = { version = "0.6.8", features = ["cors"] }
clap = { version = "4.5.60", features = ["derive"] }
tokio-tungstenite = "0.28"
futures-util = "0.3.32"
portable-pty = "0.9"
notify = "7"
notify-debouncer-mini = "0.5"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json", "time", "local-time"] }
sentry = { version = "0.46.2", features = ["tower-axum-matched-path", "tracing", "logs"] }
tracing-tree = "0.4.1"

[dev-dependencies]
tempfile = "3.26.0"
