[package]
name = "cthulu-studio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
