[package]
name = "cthulu-studio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-http = "2"
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
croner = "2"
base64 = "0.22"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-tree = "0.4.1"
axum = "0.8.8"
sentry = { version = "0.46.2", features = ["tower-axum-matched-path", "tracing", "logs"] }
hyper = { version = "1", default-features = false }
portable-pty = "0.9"

# Embed the backend server
cthulu = { path = "../.." }
